--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,4 +22,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test
-        run: go test -v -race -tags=integration
+        run: |
+          go test -v -race -tags=integration
+          cd ./embed && go test -v -race -tags=integration
